day 17 too slow